--- a/signup.html
+++ b/signup.html
@@ -42,18 +42,43 @@
       </nav>
       <h3 class="text-center"><strong>Sign Up Form</strong></h3>
       <form class="" action="" method="" style="width:500px; margin: auto;">
-        <label for="first-name">First Name</label>
-        <input type="text" name="First Name" id="first-name" class="form-control">
-        <label for="last-name">Last Name</label>
-        <input type="password" name="Last Name" id="last-name" class="form-control">
-        <label for="username">Username</label>
-        <input type="username" name="Username" id="username" class="form-control">
-        <label for="email">Email ID</label>
-        <input type="email" name="Email" id="email" class="form-control">
-        <label for="password">Password</label>
-        <input type="password" name="Password" id="password" class="form-control">
-        <label for="confirm-password">Confirm Password</label>
-        <input type="password" name="Confirm Password" id="confirm-password" class="form-control">
+        <div class="form-group">
+          <label for="first-name">First Name</label>
+          <input type="text" name="First Name" id="first-name" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="last-name">Last Name</label>
+          <input type="password" name="Last Name" id="last-name" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="account-type">Select Account Type</label>
+          <select name="Profile Type" id="account-type" class="form-control">
+            <option value="user">User</option>
+            <option value="setter">Setter</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="email">Email ID</label>
+          <input type="email" name="Email" id="email" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="username" name="Username" id="username" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" name="Password" id="password" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="confirm-password">Confirm Password</label>
+          <input type="password" name="Confirm Password" id="confirm-password" class="form-control">
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input type="checkbox" id="accept-terms" class="form-check-input">
+            <label for="accept-terms" class="form-check-label">Accept Terms & Conditions</label>
+          </div>
+        </div>
       </form>
   </body>
 </html>
