--- a/signup.html
+++ b/signup.html
@@ -94,7 +94,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary btn-block" name="button">Submit</button>
-
+            something
         </form>
     </div>
 
